<resources>
    <string name="app_name">KMADCourse</string>
    <string name="textview_hello">Hello</string>
    <string name="enter_surname">Enter your surname</string>
    <string name="enter_firstname">Enter your firstname</string>
    <string name="ch_remember">Remember me the next time</string>
    <string name="fetchurl">Download URL</string>
    <string name="fetchurl3">Download URL</string>
    <string name="fetchurl4">Download URL</string>
    <string name="fetchurl7">Download URL</string>
    <string name="waiturl">Download URL</string>
    <string name="text_message1">Programmatically written text</string>
    <string name="GoBack">Go Back</string>
    <string name="title">Title</string>
    <string name="dec">Decrease</string>
    <string name="inc">Increase</string>
    <string name="delete">Delete</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="showdialog">Show Dialog Box</string>
    <string name="showbirthdate">Show Birthdate Activity</string>
    <string name="Birthdate">Birthdate</string>
    <string name="Birthtime">Birthtime</string>
    <string name="time_formatted_str">%1$d:%2$s %3$s</string>
    <string name="date_formatted_str">%1$s-%2$s-%3$s</string>
    <string name="price">Price</string>
    <string name="id">ID</string>
    <string name="select_time">Select Time</string>
    <string name="select_date">Select Date</string>
    <string name="search">Search</string>
    <string name="addrec">Add record</string>
    <string name="create_db">Create database</string>
    <string name="product_app">Products App</string>
    <string name="showmanager">Show Manager Activity</string>
    <string name="coord">Coordinates</string>
    <string name="altit">Altitude</string>
    <string name="spd">Speed</string>
    <string name="brng">Bearing</string>
    <string name="na">Not available</string>
    <string name="coord_key">(%1$10.8f, %2$10.8f)</string>
    <string name="double_key">%1$10.3f</string>
    <string name="start_alarm">Start Periodic Task</string>
    <string name="stop_alarm">Stop task</string>
    <string name="send_key">Sending (%1$10.8f, %2$10.8f)</string>
    <string name="fetchurl5">Fetch URL (Executor)</string>
    <string name="fetchurl6">Fetch URL (Thread)</string>
    <string name="showconnect">Show ConnectActivity</string>
    <string name="confirmdelete">Are you sure you want to delete this item?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>


</resources>